# safe-temp-dir

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
safe_temp_dir/: __init__.py  core.py
tests/: test_safe_temp_dir.py
